--- a/schoolwork/Diary/Indexhtml.html
+++ b/schoolwork/Diary/Indexhtml.html
@@ -25,12 +25,12 @@
           <nav class='sidenav'>
             <ul>
               <li><a href="Uniindex.html" target="iframe_a">Webpage example</a></li>
-              <li><a href="\HTML_lessons\calculator.html" target="iframe_a">Calculator</a></li>
-              <li><a href="\HTML_lessons\piano.html" target="iframe_a">Piano</a></li>
-              <li><a href="\HTML_lessons\Canvas\index.html" target="iframe_a">Canvas</a></li>
+              <li><a href="..\HTML_lessons\calculator.html" target="iframe_a">Calculator</a></li>
+              <li><a href="..\HTML_lessons\piano.html" target="iframe_a">Piano</a></li>
+              <li><a href="..\HTML_lessons\Canvas\index.html" target="iframe_a">Canvas</a></li>
               <li onclick="function()" class="dropdown-btn">Transitions<i class="fas fa-angle-down"></i></li>
                   <ul>
-                  <li><a href="\HTML_lessons\Transitions_\transitions.html" target="iframe_a">HTML 2.1</a></li>
+                  <li><a href="..\HTML_lessons\Transitions_\transitions.html" target="iframe_a">HTML 2.1</a></li>
                   <li><a href="#" target="iframe_a">HTML 2.2</a></li>
                   <li><a href="#" target="iframe_a">HTML 2.3</a></li>
                 </ul>
