--- a/schoolwork/Diary/Index.html
+++ b/schoolwork/Diary/Index.html
@@ -27,26 +27,26 @@
               <li onclick="function()" class="dropdown-btn">
                 <a href="frame_grid_numbers.html" target="iframe_a">Basic mathematics<i class="fas fa-angle-down"></i></a></li>
                   <ul>
-                  <li><a href='\Javascript_lessons\gasoline.html' target="iframe_a">JS 1.1</a></li>
-                  <li><a href='\Javascript_lessons\bmi.html' target="iframe_a">JS 1.2</a></li>
-                  <li><a href='\Javascript_lessons\inch.html' target="iframe_a">JS 1.3</a></li>
+                  <li><a href='..\Javascript_lessons\gasoline.html' target="iframe_a">JS 1.1</a></li>
+                  <li><a href='..\Javascript_lessons\bmi.html' target="iframe_a">JS 1.2</a></li>
+                  <li><a href='..\Javascript_lessons\inch.html' target="iframe_a">JS 1.3</a></li>
                 </ul>
               <li onclick="function()" class="dropdown-btn">
                 <a href="frame_grid_numbers.html" target="iframe_a">Conditions<i class="fas fa-angle-down"></i></a></li>
                   <ul>
-                  <li><a href="\Javascript_lessons\ifage.html" target="iframe_a">JS 2.1</a></li>
-                  <li><a href="\Javascript_lessons\3numbers.html" target="iframe_a">JS 2.2</a></li>
-                  <li><a href="\Javascript_lessons\ifstate2.html" target="iframe_a">JS 2.3</a></li>
+                  <li><a href="..\Javascript_lessons\ifage.html" target="iframe_a">JS 2.1</a></li>
+                  <li><a href="..\Javascript_lessons\3numbers.html" target="iframe_a">JS 2.2</a></li>
+                  <li><a href="..\Javascript_lessons\ifstate2.html" target="iframe_a">JS 2.3</a></li>
                 </ul>
               <li onclick="function()" class="dropdown-btn">
                 <a href="frame_grid_numbers.html" target="iframe_a">Loops<i class="fas fa-angle-down"></i></a></li>
                 <ul>
-                <li><a href="\Javascript_lessons\dropdown.html"  target="iframe_a">JS 3.1</a></li>
-                <li><a href="\Javascript_lessons\20nrs.html" target="iframe_a">JS 3.2</a></li>
-                <li><a href="\Javascript_lessons\ass2_98.html" target="iframe_a">JS 3.3</a></li>
-                <li><a href="\Javascript_lessons\nro8.html" target="iframe_a">JS 3.4</a></li>
-                <li><a href="\Javascript_lessons\nro9.html" target="iframe_a">JS 3.5</a></li>
-                <li><a href='\Javascript_lessons\array1a.html' target="iframe_a">JS 3.6</a></li>
+                <li><a href="..\Javascript_lessons\dropdown.html"  target="iframe_a">JS 3.1</a></li>
+                <li><a href="..\Javascript_lessons\20nrs.html" target="iframe_a">JS 3.2</a></li>
+                <li><a href="..\Javascript_lessons\ass2_98.html" target="iframe_a">JS 3.3</a></li>
+                <li><a href="..\Javascript_lessons\nro8.html" target="iframe_a">JS 3.4</a></li>
+                <li><a href="..\Javascript_lessons\nro9.html" target="iframe_a">JS 3.5</a></li>
+                <li><a href='..\Javascript_lessons\array1a.html' target="iframe_a">JS 3.6</a></li>
               </ul>
               <li><a href='indexVentti.html' target="iframe_a">Ventti -the game</a></li>
             </ul>
