--- a/schoolwork/Diary/cv.html
+++ b/schoolwork/Diary/cv.html
@@ -19,7 +19,7 @@
 
     <nav>
       <ul class='topnav' id='mobTopNav'>
-        <li><a href="index.html"> Home</a></li>
+        <li><a href="Index.html"> Home</a></li>
         <li><a href="cv.html"> CV</a></li>
         <li><a href="#"> Contact</a></li>
         <a onclick='topnavFunction()' href='#' class='icon'><i class="fa fa-bars"></i></a>
