--- a/schoolwork/Diary/Index.html
+++ b/schoolwork/Diary/Index.html
@@ -27,7 +27,7 @@
               <li onclick="function()" class="dropdown-btn">
                 <a href="frame_grid_numbers.html" target="iframe_a">Basic mathematics<i class="fas fa-angle-down"></i></a></li>
                   <ul>
-                  <li><a href='..\Javascript_lessons\gasoline.html' target="iframe_a">JS 1.1</a></li>
+                  <li><a href='..\..\Javascript_lessons\gasoline.html' target="iframe_a">JS 1.1</a></li>
                   <li><a href='..\Javascript_lessons\bmi.html' target="iframe_a">JS 1.2</a></li>
                   <li><a href='..\Javascript_lessons\inch.html' target="iframe_a">JS 1.3</a></li>
                 </ul>
