--- a/schoolwork/Diary/cv.html
+++ b/schoolwork/Diary/cv.html
@@ -21,7 +21,7 @@
       <ul class='topnav' id='mobTopNav'>
         <li><a href="Index.html"> Home</a></li>
         <li><a href="cv.html"> CV</a></li>
-        <li><a href="#"> Contact</a></li>
+        <li><a href="https://www.linkedin.com/in/riikka-harju/"> Contact</a></li>
         <a onclick='topnavFunction()' href='#' class='icon'><i class="fa fa-bars"></i></a>
       </ul>
     </nav>
