--- a/schoolwork/Diary/Uniindex.html
+++ b/schoolwork/Diary/Uniindex.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
       <ul class="topnav" id="mobTopNav">
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="Uniindex.html">Home</a></li>
         <li><a href="cv.html">CV</a></li>
         <li><a href="https://www.linkedin.com/in/riikka-harju/">Contact</a></li>
         <a href="javascript:void(0);" class="icon" onclick="topnavfunction()">
