--- a/schoolwork/Diary/Index.html
+++ b/schoolwork/Diary/Index.html
@@ -15,7 +15,7 @@
       </div>
       <nav>
         <ul class='topnav' id='TopNav'>
-          <li><a href="https://www.linkedin.com/in/riikka-harju/">About Me</a></li>
+          <li><a href="https://www.linkedin.com/in/riikka-harju/" target="iframe_a">About Me</a></li>
           <li><a href='Index.html'>JS Lessons</a></li>
           <li><a href="Indexhtml.html">HTML Lessons</a></li>
         </ul>
