--- a/schoolwork/Diary/Uniindex.html
+++ b/schoolwork/Diary/Uniindex.html
@@ -19,7 +19,7 @@
       <ul class="topnav" id="mobTopNav">
         <li><a href="Uniindex.html">Home</a></li>
         <li><a href="cv.html">CV</a></li>
-        <li><a href="https://www.linkedin.com/in/riikka-harju/">Contact</a></li>
+        <li><a href="https://www.linkedin.com/in/riikka-harju/" target="iframe_a">Contact</a></li>
         <a href="javascript:void(0);" class="icon" onclick="topnavfunction()">
           <i class="fa fa-bars"></i>
         </a>
