--- a/schoolwork/Diary/cv.html
+++ b/schoolwork/Diary/cv.html
@@ -19,9 +19,9 @@
 
     <nav>
       <ul class='topnav' id='mobTopNav'>
-        <li><a href="Index.html"> Home</a></li>
+        <li><a href="Uniindex.html" target="iframe_a"> Home</a></li>
         <li><a href="cv.html"> CV</a></li>
-        <li><a href="https://www.linkedin.com/in/riikka-harju/"> Contact</a></li>
+        <li><a href="https://www.linkedin.com/in/riikka-harju/" target="iframe_a"> Contact</a></li>
         <a onclick='topnavFunction()' href='#' class='icon'><i class="fa fa-bars"></i></a>
       </ul>
     </nav>
