--- a/schoolwork/Diary/Indexhtml.html
+++ b/schoolwork/Diary/Indexhtml.html
@@ -31,7 +31,7 @@
               <li onclick="function()" class="dropdown-btn">Transitions<i class="fas fa-angle-down"></i></li>
                   <ul>
                   <li><a href="..\HTML_lessons\Transitions_\transitions.html" target="iframe_a">HTML 2.1</a></li>
-                  <li><a href="#" target="iframe_a">HTML 2.2</a></li>
+                  <li><a href="..\Javascript_lessons\json.html" target="iframe_a">HTML 2.2</a></li>
                   <li><a href="#" target="iframe_a">HTML 2.3</a></li>
                 </ul>
               <li onclick="function()" class="dropdown-btn">More<i class="fas fa-angle-down"></i></li>
