--- a/schoolwork/Diary/Indexhtml.html
+++ b/schoolwork/Diary/Indexhtml.html
@@ -15,7 +15,7 @@
       </div>
       <nav>
         <ul class='topnav' id='TopNav'>
-          <li><a href="https://www.linkedin.com/in/riikka-harju/" target="iframe_a">About Me</a><div class='line'></div></li>
+          <li><a href="https://www.linkedin.com/in/riikka-harju/" target="_blank">About Me</a><div class='line'></div></li>
           <li><a href='Index.html'>JS Lessons</a><div class='line'></div></li>
           <li><a href="Indexhtml.html">HTML Lessons</a><div class='line'></div></li>
         </ul>
