--- a/schoolwork/Diary/frame_grid_numbers.html
+++ b/schoolwork/Diary/frame_grid_numbers.html
@@ -15,6 +15,7 @@
   grid-row-gap: 30px;
   background-color: none;
   padding: 20px;
+  width: auto;
 }
 /* Here goes about flipping cards (beginning from transform)... */
 .grid-item {
